layout: Fix the rendering of the logo on mobile and the crisp edges looking bad

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -179,8 +179,9 @@ a:hover {
   }
 
   .site-avatar {
-    height: 5.6rem;
-    width: 5.6rem;
+    height: auto;
+    width: auto;
+    image-rendering: crisp-edges;
   }
 
   .site-intro h1 {
